--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,127 @@
-h1 {
+body {
     font-family: 'Montserrat', sans-serif;
-    font-size: 3rem;
+}
+
+h1 {
+    font-size: 3.5rem;
     line-height: 1.5;
     font-weight: 900;
-    color: white;
+}
+
+.container-fluid {
+    padding: 3% 15%;
+    height: 600px;
+    overflow: hidden;
 }
 
 
-
 #title {
-    background-color: #ff4c68;
+    background-color: #ff4c68;  
+    color: white;  
+}
+
+.fa-brands {
+    padding-right: 5px;
+}
+
+/* Navigation Bar */
+
+.navbar {
+    padding-bottom: 4.5rem ;
+}
+
+.navbar-brand {
+    font-size: 2.5rem;
+    font-family: "Ubuntu";
+    font-weight: bold;
+}
+
+.nav-link{
+    font-size: 1.2rem;
+    font-weight: 200;
+}
+
+.nav-item {
+    padding: 0 18px;
+}
+
+/* Download Buttons */
+
+.download-button {
+    margin: 5% 3% 5% 0;
+}
+
+/* Title Image */
+
+.iphone-img {
+    position: relative;
+    transform: rotate(25deg);
+    width: 60%;
+    left: 100px;
+    
+}
+
+/* Media Queries */
+
+@media only screen and (max-width: 1267px) {
+   h1 {
+    font-size: 3rem;
+   }
+}
+
+@media only screen and (max-width: 1091px) {
+    h1 {
+        font-size: 2.8rem;
+    }
+}
+
+@media only screen and (max-width: 1048px) {
+    .download-button {
+
+        margin: 10% 1%;
+    }
+}
+
+@media only screen and (max-width: 1021px) {
+
+    .container-fluid {
+        text-align: center;
+        height: auto;
+    }
+
+    .nav-item {
+        text-align: center;
+        margin: 25px auto 0 auto;
+    }
+
+    .navbar-nav {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .iphone-img {
+        display: none;
+    }
+
+    .header-col {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 496px) {
+
+    .container-fluid {
+        padding: 5%;
+    }
+
+    .header-col-buttons {
+        padding: 20%;
+    }
+
+    .download-button {
+        margin: 5% auto  0 auto;
+    }
+    #title {
+        padding-bottom: 5%;
+    }
 }
