--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,17 @@ h1 {
     font-weight: 900;
 }
 
+h2 {
+    font-weight: bold;
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+h3 {
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
 .container-fluid {
     padding: 3% 15%;
     height: 600px;
@@ -58,7 +69,60 @@ h1 {
     transform: rotate(25deg);
     width: 60%;
     left: 100px;
-    
+}
+
+/* Feature Section */
+
+#features{
+    background-color: white;
+    padding: 7% 15%;
+    position: relative;
+  }
+
+.feature-box {
+    text-align: center;
+    padding: 4.5%;
+}
+
+.feature-icon {
+    color: #ef8172;
+    margin-bottom: 1rem;
+}
+
+.feature-box p {
+    color: #8f8f8f;
+}
+
+.feature-icon:hover{
+    color: #ff4c68;
+  }
+
+/* Testimonial Section */
+
+#testimonials {
+    background-color: #ef8172;
+    color: #fff;
+    padding: 7% 15%;
+    text-align: center;
+}
+
+.testimonial-image {
+    width: 10%;
+    border-radius: 50%;
+    margin: 20px;
+}
+
+/* Press Section */
+
+#press {
+    background-color: #ef8172;
+    text-align: center;
+    padding-bottom: 3%;
+}
+
+.press-logo {
+    width: 15%;
+    margin: 20px 20px 50px;
 }
 
 /* Media Queries */
